# lineage-analyzer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: asset-manifest.json  index.html
docs/report/: sample_sql_lineage.json
docs/static/css/: main.3f727fda.css  main.3f727fda.css.map
docs/static/js/: main.41dbfff5.js  main.41dbfff5.js.map  main.8dbf4f2f.js  main.8dbf4f2f.js.LICENSE.txt  main.8dbf4f2f.js.map
lineage_view_app/: .gitignore  app.py  app.yaml
lineage_view_app/lineage_viewer/: lineage_viewer.js
lineage_view_app/report/: PRODUCT_DIM.bteq  PRODUCT_DIM_sql_lineage.json  processing_summary.yaml  sample.bteq
lineage_viewer_app/: README.md  app.py
lineage_viewer_app/lineage_viewer/: lineage_viewer.js
lineage_viewer_app/lineage_viewer_react/: README.md  package-lock.json  package.json
lineage_viewer_app/lineage_viewer_react/src/: App.css  App.tsx
lineage_viewer_app/lineage_viewer_react/src/components/: FileInputSection.tsx  Header.tsx  LoadingMessage.tsx  NetworkModal.tsx  NetworkStatistics.tsx  ScriptStatisticsModal.tsx  TabSection.tsx  TableUsageDetails.tsx  VirtualizedTableList.tsx
lineage_viewer_app/lineage_viewer_react/src/components/tabs/: NetworkControls.tsx  NetworkTab.css  NetworkTab.tsx  StatementsTab.tsx  TablesTab.tsx
lineage_viewer_app/lineage_viewer_react/src/types/: LineageData.ts
report/: all_lineage.txt  processing_summary.txt  processing_summary.yaml  sample_sh_lineage.html  sample_sh_lineage.json  sample_sql_lineage.html  sample_sql_lineage.json
samples/: PRODUCT_DIM.sql  sample.sh  sample.sql  sample_sh.sql
src/: default.css  lineage.py  lineage_viewer.html  lineage_viewer.js  lineage_visualizer.py  network_visualizer.py
src/lineage_analyzer/: README.md  __init__.py  lineage.py  sqlglot_parser.py
src/lineage_viewer/: default.css  lineage_viewer.html  lineage_viewer.js
src/sql_extractor/: README.md  __init__.py  extract_sql.py  sql_extractor.py
tests/: __init__.py  test_lineage.py  test_sql_extractor.py  test_sqlglot_parser.py
